Make sort icon black
- WS cleanup

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -1,4 +1,6 @@
-﻿.archetypeEditor {
+﻿/* TODO: clean this up */
+
+.archetypeEditor {
     width: 98%;
 
     .dropdown-menu {
@@ -11,6 +13,10 @@
 
     a+ul.dropdown-menu {
         margin-left: 25px;
+    }
+
+    .icon {
+        color: #333;
     }
 }
 
