--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -142,6 +142,10 @@
             <input type="checkbox" id="archetypeAdvancedOptionsDeveloperMode" ng-model="archetypeConfigRenderModel.developerMode"/>
         </div>
         <div>
+            <label for="archetypeOverrideDefaultConverter"><archetype-localize key="overrideDefaultConverter">Override default PropertyValueConverter</archetype-localize><small><archetype-localize key="overrideDefaultConverterDescription">Check this if you wish to use your own custom property value converter</archetype-localize></small></label>
+            <input type="checkbox" id="archetypeOverrideDefaultConverter" ng-model="archetypeConfigRenderModel.overideDefaultPropertyValueConverter" />
+        </div>
+        <div>
             <label for="archetypeAdvancedOptionsConfigModel"><archetype-localize key="configModel">Config Model</archetype-localize><small><archetype-localize key="configModelDescription">Be careful editing the text below, it controls the schema for this archetype.</archetype-localize></small></label>
             <textarea class="archetypeDeveloperModel" id="archetypeAdvancedOptionsConfigModel" ng-model="archetypeConfigRenderModel"></textarea>
         </div>
