--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -142,7 +142,7 @@
             <input type="checkbox" id="archetypeAdvancedOptionsDeveloperMode" ng-model="archetypeConfigRenderModel.developerMode"/>
         </div>
         <div>
-            <label for="archetypeOverrideDefaultConverter"><archetype-localize key="overrideDefaultConverter">Override default PropertyValueConverter</archetype-localize><small><archetype-localize key="overrideDefaultConverterDescription">Check this if you wish to use your own custom property value converter</archetype-localize></small></label>
+            <label for="archetypeOverrideDefaultConverter"><archetype-localize key="overrideDefaultConverter">Override default PropertyValueConverter</archetype-localize><small><archetype-localize key="overrideDefaultConverterDescription">Check this if you wish to use your own custom property value converter.</archetype-localize></small></label>
             <input type="checkbox" id="archetypeOverrideDefaultConverter" ng-model="archetypeConfigRenderModel.overrideDefaultPropertyValueConverter" />
         </div>
         <div>
