Small UX update for add button
Added class "archetypeAddButton" to the button so it can make use of the
CSS that is writen for it.
The button should also have a cursor: pointer on hover.

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -181,6 +181,7 @@
 
     .archetypeAddButton:hover {
         text-decoration: none;
+        cursor: pointer;
 
         .archetypeAddButtonText {
             text-decoration: underline;
