--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -325,7 +325,7 @@
         }
     }
 
-    .archetypeMaxFieldsets{
+    .archetypeMaxFieldsets, .archetypeMinFieldsets {
         border: 1px solid #ddd;
         width: 40px;
         text-align: right;
