Make the delete icon red on hover

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -29,6 +29,9 @@
         &:hover {
             color: #333;
         }
+        &.icon-delete:hover {
+            color: #b94a48;
+        }
     }
 
     .fieldsetIcon {
