Final tweaks to css and version numbers

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -3,6 +3,12 @@
 .archetypeEditor {
     width: 98%;
 
+    .usky-grid {
+        .cell-tools-menu {
+            height: 385px;
+        }
+    }
+
     .open {
         position: relative;
     }
@@ -250,7 +256,8 @@
         }
         ul.elements li {
             overflow: visible;
-            vertical-align: top;          
+            vertical-align: top;  
+            height: 90px;        
         }
     }
 }
