Move fieldset groups config to advanced settings

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -386,22 +386,6 @@
         }
     }
 
-    .archetypeFieldsetGroups {
-        padding: 0 10px;
-        margin-bottom: 20px;
-        ul {
-            padding: 0;
-            margin: 0;
-
-            li {
-                margin-bottom: 10px;
-                input {
-                    vertical-align: middle;
-                }
-
-            }
-        }
-    }
     .archetypeAdvancedOptions {
         margin-top: 15px;
         div {
@@ -410,6 +394,26 @@
         label {
             width: 400px;
         }
+        .archetypeFieldsetGroups {
+            padding: 0 10px;
+            margin-bottom: 20px;
+            ul {
+                padding: 0;
+                margin: 0;
+
+                li {
+                    margin-bottom: 10px;
+                    label {
+                        width: 120px;
+                    }
+
+                    input {
+                        vertical-align: middle;
+                        width: 240px;
+                    }
+                }
+            }
+        }        
     }
 
     .archetypeMaxFieldsets{
