--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -387,16 +387,24 @@
     }
 
     .archetypeAdvancedOptions {
-        margin-top: 15px;
-        div {
-            margin-bottom: 10px;
-        }
         label {
-            width: 400px;
+            width: 100%;
         }
+
+        input[type=checkbox] {
+            margin-top: 0;
+            margin-right: 2px;
+        }
+
+        small {
+            color: #b3b3b3;
+        }
+
+
         .archetypeFieldsetGroups {
             padding: 0 10px;
             margin-bottom: 20px;
+
             ul {
                 padding: 0;
                 margin: 0;
@@ -446,4 +454,8 @@
 .ui-sortable-placeholder {
     visibility: visible !important;
     background-color:   #d0e7f1 !important;
+}
+
+.archetype-dialog {
+    margin: 10px;
 }
