--- a/app/views/archetype.config.fieldset.dialog.html
+++ b/app/views/archetype.config.fieldset.dialog.html
@@ -33,7 +33,7 @@
 
         <div class="archetypeFieldsetGroups" ng-show="model.enableMultipleFieldsets">
             <h4><archetype-localize key="fieldsetGroups">Fieldset groups</archetype-localize></h4>
-            <small><archetype-localize key="fieldsetGroupsDescription">If you have a lot of fieldsets to choose from, you may want to consider grouping them in the fieldset picker. Once you have created your groups here, a group picker will be displayed in the fieldset editor and you can assign your fieldsets to their respective groups.</archetype-localize></p>
+            <small><archetype-localize key="fieldsetGroupsDescription">If you have a lot of fieldsets to choose from, you may want to consider grouping them in the fieldset picker. Once you have created your groups here, a group picker will be displayed in the fieldset editor and you can assign your fieldsets to their respective groups.</archetype-localize></small>
             <ul ui-sortable="sortableOptions" ng-model="model.fieldsetGroups">
                 <li ng-repeat="fieldsetGroup in model.fieldsetGroups">
                     <div>
