--- a/app/views/archetype.config.stylescript.dialog.html
+++ b/app/views/archetype.config.stylescript.dialog.html
@@ -1,5 +1,5 @@
 <div class="umb-dialog archetype-dialog archetypeConfig" ng-controller="ArchetypeConfigOptionsController">
-    <div class="umb-dialog-body" auto-scale="90">
+    <div class="umb-dialog-body archetypeAdvancedOptions" auto-scale="90">
         <div>
             <label for="archetypeAdvancedOptionsCustomClass"><archetype-localize key="customWrapperClass">Custom Wrapper Class</archetype-localize><small><archetype-localize key="customWrapperClassDescription">(Optional) Enter a custom CSS class that will be applied to the wrapper div.</archetype-localize></small></label>
             <input type="text" id="archetypeAdvancedOptionsCustomClass" ng-model="model.customCssClass"/>
