Removed the 'name' label as it takes up a fair bit of space and is sort of redundant

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -407,9 +407,10 @@
             ul {
                 padding: 0;
                 margin: 0;
+                margin-top: 15px;
 
                 li {
-                    margin-bottom: 10px;
+
                     label {
                         width: 120px;
                     }
